# music-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docker.yml
lavalink/: Dockerfile  application.yml  railway.toml
src/music_bot/: __init__.py  __main__.py  bot.py  config.py  db.py  lavalink.py  logging_setup.py  memory_guard.py  player.py  routing.py  supervisor.py
src/music_bot/cogs/: playback.py  queue.py  voice.py  volume.py
src/music_bot/ui/: modals.py  panel.py  queue_view.py
src/music_bot/utils/: checks.py  embeds.py  format.py
tests/: conftest.py  test_db.py  test_format.py  test_player.py  test_routing.py  test_voice_cog.py  test_volume_cog.py
