[project]
name = "music-bot"
version = "0.1.0"
description = "Discord music bot replicating Jockie Music"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "discord.py>=2.4.0,<3.0",
    "wavelink>=3.4.0,<4.0",
    "asyncpg>=0.29.0,<1.0",
    "aiohttp>=3.9.0,<4.0",
    "pydantic>=2.7.0,<3.0",
    "pydantic-settings>=2.3.0,<3.0",
    "psutil>=5.9.0,<8.0",
    "uvloop>=0.19.0,<1.0; sys_platform != 'win32'",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "testcontainers[postgres]>=4.5.0",
    "types-psutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_bot"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "N",
    "ASYNC",
    "S",
    "C4",
    "RET",
    "SIM",
    "TID",
]
ignore = [
    "S101",
    "S311",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = []

[[tool.mypy.overrides]]
module = ["wavelink.*", "discord.*", "asyncpg.*"]
ignore_missing_imports = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
